--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Aurora Orbit API Console</title>
+        <title>Aurora Orbit API Console v2</title>
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swagger-ui-dist@5/swagger-ui.css"
