--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
             SwaggerUIBundle({
               // spec,
-              url: './openapi.json'
+              url: './openapi.json',
               dom_id: '#swagger-ui',
               presets: [SwaggerUIBundle.presets.apis],
               layout: "BaseLayout"
